# mini-httpserver

./: .gitignore  CMakeLists.txt  a.out  context.h  epoll-server.cpp  epoll.cpp  file_service.h  file_service.test.cpp  http-test.cpp  http.cpp  http.h  logger.h  mainloop.h  note.md  readme.md  response.http  route.cpp  route.h  run.cpp  run.sh  server.cpp  server.h  set_socket.h  sock_connection.cpp  tcpsocket.hpp  test.txt  timer.cpp  timer.h  utils.test.cpp
file_service/: a.out  file_service.h  file_service.test.cpp  output.txt
fileserver/: epoll-client.cpp  file_client.c  file_server.c
http/: http-test.cpp  http.cpp  http.h  reg  reg.cpp
route/: trie.h
server/: a.out  route.cpp  route.h  route.test.cpp  server.h
socket/: set_socket.h
test/: http-test.cpp  http_context.h  test.cpp
utils/: a.out  utils.h  utils.test.cpp
